...
        android:title="@string/navigation_drawer_button_TODO_list" />
    <item
        android:id="@+id/button_maindrawer_chats"
        android:icon="@drawable/ic_maindrawer_chat"
        android:title="@string/navigation_drawer_button_chats" />
    <item
        android:id="@+id/button_maindrawer_settings"
        android:icon="@drawable/ic_maindrawer_settings"
        android:title="@string/navigation_drawer_section_settings" />
    <item
        android:id="@+id/button_maindrawer_logout"
        android:icon="@drawable/ic_maindrawer_logout"
        android:title="@string/navigation_drawer_button_logout" />
...
