<?xml version="1.0" encoding="utf-8"?>
<vendor.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:dragFromEdge="right"
    tools:minHeight="70dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_mypostadapter_edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_post_edit"
                android:contentDescription="@string/post_hinteditbutton" />

            <ImageButton

                android:id="@+id/button_mypostadapter_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_post_delete"
                android:contentDescription="@string/postadapter_hintdeletebutton" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/framelayout_mypostadapter"
        android:clickable="true"
        android:focusable="true">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            tools:minHeight="70dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textview_mypostadapter_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_vertical"
                    android:text="Title"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textview_mypostadapter_body"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_vertical"
                    android:text="Body"
                    android:textSize="15sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>
</vendor.SwipeRevealLayout>