<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    -->

    <group android:id="@+id/group_switchtomap" >
        <item
            android:id="@+id/action_switchtomap"
            android:enabled="false"
            android:icon="@drawable/ic_maindrawer_language"
            android:title="Item"
            android:visible="false"
            app:showAsAction="always" />
    </group>
    <group android:id="@+id/group_switchtoposts">
        <item
            android:id="@+id/action_switchtoposts"
            android:enabled="false"
            android:icon="@drawable/ic_menu_switchtopost"
            android:title="Item"
            android:visible="false"
            app:showAsAction="always" />
    </group>
    <group
        android:id="@+id/group_cancel">

        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_menuitem_save"
            android:orderInCategory="100"
            android:title="Save"
            android:visible="false"
            android:enabled="false"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_refresh">

        <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_menuitem_refresh"
            android:orderInCategory="100"
            android:title="Refresh"
            android:visible="false"
            android:enabled="false"
            app:showAsAction="always" />
    </group>

</menu>
